<resources>
    <string name="app_name">CS2450 Project</string>
    <string name="title">Memory Game</string>
    <string name="start_button">Start</string>
    <string name="high_score_button">High Scores</string>
    <string name="toggle_music">Turn music on/off</string>
    <string name="card_one">One</string>
    <string name="card_blank">BLANK</string>
    <string name="card_two">Two</string>
    <string name="card_three">Three</string>
    <string name="card_four">Four</string>
    <string name="try_again_button">TRY AGAIN</string>
    <string name="new_game_button">NEW GAME</string>
    <string name="end_game_button">END GAME</string>
    <string name="score">Score: </string>
    <string name="initial_score">0</string>
    <string name="game_choice_4">4 tiles</string>
    <string name="game_choice_6">6 tiles</string>
    <string name="game_choice_8">8 tiles</string>
    <string name="game_choice_10">10 tiles</string>
    <string name="game_choice_12">12 tiles</string>
    <string name="game_choice_14">14 tiles</string>
    <string name="game_choice_16">16 tiles</string>
    <string name="game_choice_18">18 tiles</string>
    <string name="game_choice_20">20 tiles</string>
    <string name="high_score_title">CONGRATULATIONS! You completed the game!</string>
    <string name="high_score_enter">Please enter your initials</string>
    <string name="back_to_main">Submit</string>
    <string name="empty_entry">--------</string>
    <string name="select_board">Select game board</string>
</resources>