<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/card_one12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank"
            tools:src="@drawable/ic_baseline" />

        <ImageButton
            android:id="@+id/card_two12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />

        <ImageButton
            android:id="@+id/card_three12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />

        <ImageButton
            android:id="@+id/card_four12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/card_five12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
        <ImageButton
            android:id="@+id/card_six12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
        <ImageButton
            android:id="@+id/card_seven12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />

        <ImageButton
            android:id="@+id/card_eight12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/card_nine12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
        <ImageButton
            android:id="@+id/card_ten12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
        <ImageButton
            android:id="@+id/card_eleven12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
        <ImageButton
            android:id="@+id/card_twelve12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline"
            android:text="@string/card_blank" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"/>
        <TextView
            android:id="@+id/score_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_score"/>
    </LinearLayout>
    <Button
        android:id="@+id/try_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again_button"/>
    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"/>
    <Button
        android:id="@+id/end_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_button"/>

</LinearLayout>